<resources>
    <string name="app_name">LabMovers Controller</string>

    <string name="start_coor_label">Enter Start Coordinate</string>
    <string name="control_mode_label">Control Mode</string>
    <string name="exploration_map_label">Exploration</string>
    <string name="fastest_map_label">Fastest Run</string>
    <string name="interactive_control_label">Interactive Control</string>
    <string name="leaderboard_label">Leaderboard</string>
    <string name="pre_run_label">Coordinate Picker</string>
    <string name="scan_device_label">Device List</string>
    <string name="scan_receive_label">Connection Status</string>

    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>

    <string name="x_label">X</string>
    <string name="y_label">Y</string>
    <string name="height_hint">0&#8211;17</string>
    <string name="width_hint">0&#8211;12</string>
    <string name="initiate_interactive_control">Run</string>

    <string name="robot_reset_title">Bring Robot to Start Zone?</string>
    <string name="obstacles_reset_title">Clear all obstacles?</string>
    <string name="confirm_text">Confirm</string>
    <string name="cancel_text">Cancel</string>
    <string name="robot_initial_status">== Robot Ready ==</string>

    <string name="invalid_coordinate">Coordinates must be an INTEGER</string>
    <string name="backward_warning">Cannot Move Backward</string>
    <string name="hit_north_wall">Hit Wall: North</string>
    <string name="hit_south_wall">Hit Wall: South</string>
    <string name="hit_east_wall">Hit Wall: East</string>
    <string name="hit_west_wall">Hit Wall: West</string>
    <string name="refresh_text">Refreshing&#8230;</string>
    <string name="exploration_stop">Robot Returning To Start&#8230;</string>
    <string name="exploration_started">Exploration Started</string>
    <string name="fastest_started">Fastest Run Started</string>
    <string name="to_exploration_mode">Switched to Exploration</string>
    <string name="to_fastest_mode">Switched to Fastest</string>
    <string name="mode_switch_warning">Please stop the robot before switching mode!</string>
    <string name="initial_clock">00:00</string>
    <string name="not_connected">Not Connected</string>
    <string name="coordinate_reset">Robot Coordinate Reset</string>

    <string name="configurable_button_1">Button 1</string>
    <string name="configurable_button_2">Button 2</string>
    <string name="save_configutaion">Save Button Configuration</string>

    <string name="turn_left_button">Turn Left</string>
    <string name="turn_right_button">Turn Right</string>
    <string name="move_forward_button">Forward</string>

    <string name="menu_item_mode">Toggle Mode</string>
    <string name="menu_item_start">Start/Pause</string>
    <string name="menu_item_switch">Switch</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_obstacle">Clear Obstacles</string>
    <string name="menu_item_robot">Reset Robot</string>
    <string name="show_md5_label">Show MD5</string>
    <string name="coverage_string_label">Coverage String</string>
    <string name="obstacle_string_label">Obstacle String</string>

    <string name="rpi1">RPI: C1</string>
    <string name="rpi2">RPI: 2B</string>
</resources>
