<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/start_fastest"
        android:title="@string/menu_item_mode"
        android:showAsAction="always"
        android:icon="@mipmap/ic_ff" />
    <item
        android:id="@+id/exploration_start"
        android:title="@string/menu_item_start"
        android:showAsAction="always"
        android:icon="@mipmap/ic_play" />

    <item
        android:id="@+id/auto_refresh_toggle"
        android:actionViewClass="android.widget.Switch"
        android:title="@string/menu_item_switch"
        android:showAsAction="always" />

    <item
        android:id="@+id/refresh_button"
        android:icon="@mipmap/ic_action_refresh"
        android:title="@string/menu_item_refresh"
        android:showAsAction="always" />

    <item
        android:id="@+id/obstacles_reset"
        android:showAsAction="never"
        android:title="@string/menu_item_obstacle"/>

    <item
        android:id="@+id/robot_reset"
        android:showAsAction="never"
        android:title="@string/menu_item_robot"/>
</menu>