<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_configurable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.mdp17.group12.labmoverscontroller.ConfigurableActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_below="@id/my_toolbar"
            android:layout_margin="@dimen/custom_margin"
            android:text="@string/configurable_button_1"
            android:ems="10"
            android:id="@+id/configButton1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_below="@id/configButton1"
            android:layout_marginRight="@dimen/custom_margin"
            android:layout_marginLeft="@dimen/custom_margin"
            android:text="@string/configurable_button_2"
            android:ems="10"
            android:id="@+id/configButton2" />

        <Button
            android:text="@string/save_configutaion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/configButton2"
            android:layout_margin="@dimen/custom_margin"
            android:id="@+id/reconfigButton" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/reconfigButton"
            android:layout_margin="@dimen/custom_margin">

            <Button
                android:text="@string/configurable_button_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/configurable_button_margin"
                android:textSize="@dimen/custom_text_size_large"/>

            <Button
                android:text="@string/configurable_button_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/configurable_button_margin"
                android:textSize="@dimen/custom_text_size_large"/>
        </LinearLayout>
    </RelativeLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/colorGray"
        android:dividerHeight="@dimen/default_dividerHeight"
        android:background="@color/colorWhite"
        android:layout_margin="@dimen/navigation_drawer_margin"/>

</android.support.v4.widget.DrawerLayout>


